stretch goals attempted--contact page built, navigation links need to be fixed

--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,11 @@ nav div a {
   font-weight: bolder;
   padding: 0 15px;
 }
+
+
+
+
+
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -353,3 +358,85 @@ footer p {
   margin: 0 2.5%;
   border-radius: 10px;
 }
+.contact-area {
+  margin: 3rem 0 5rem;
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.contact-area form {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.contact-area form input {
+  width: 55%;
+  height: 2.5rem;
+  margin: 0.2rem;
+  border: 1px solid #dadedb;
+  padding: 1rem;
+  font-size: 1.7rem;
+  border-radius: 5px;
+  font-family: 'Ubuntu', sans-serif;
+}
+.contact-area form input::placeholder {
+  color: #b4b8b1;
+}
+@media (max-width: 500px) {
+  .contact-area form input {
+    width: 90%;
+    height: 3.5rem;
+  }
+}
+.contact-area form textarea {
+  width: 55%;
+  height: 8rem;
+  margin: 0.2rem;
+  border: 1px solid #dadedb;
+  padding: 1rem;
+  font-size: 1.7rem;
+  border-radius: 5px;
+  font-family: 'Ubuntu', sans-serif;
+}
+.contact-area form textarea::placeholder {
+  color: #b4b8b1;
+}
+@media (max-width: 500px) {
+  .contact-area form textarea {
+    width: 90%;
+  }
+}
+.contact-area form .btnSubmit {
+  padding: 0;
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 2rem;
+  color: #F6F6F6;
+  background-color: #22283A;
+  height: 3rem;
+  line-height: 3rem;
+  border-radius: 4px;
+  width: 100px;
+  cursor: pointer;
+}
+.contact-area form .btnSubmit:hover {
+  background-color: #F6F6F6;
+  color: #22283A;
+  text-decoration: underline;
+}
+.contact-area form .btnSubmit:hover a {
+  color: #22283A;
+}
+@media (max-width: 500px) {
+  .contact-area form .btnSubmit {
+    width: 90%;
+    height: 4rem;
+    line-height: 4rem;
+  }
+}
+
+
